# GeneralInfrastructure

./: .gitignore  README.md  README_connectivity.md  SF_Enjoy.py  SUGGESTIONS.md  UPDATES.md  common.py  compile.sh  compile.sh.save  control.py  controlVelocityPID.py  controlVelocityRL.py  graph_logs.py  graph_logs_ai.py  hardware_adapter.py  hardware_adapter.sh  low_pass_filter.py  mavsdk_adapter.py  model_zmq_bridge.cc  myDroneKit.py  point_trajectory_env.py  pth2json.py  quadSimRealTime.py  readLogs.py  rl_policy.py  rl_policyClean.py  runBash.sh  runOnBoard.sh  runOnBoardC.sh  runOnBoardCPP.sh  runOnBoardPY.sh  runOnBoardUDP.sh  runSimJammy.sh  runSimNoetic.sh  runSimNoeticMulti.sh  run_px4_sitl_docker.sh  simpleMavlinkSwitchTo.py  simpleMavlinkTest.py  simpleZMQread.py  system_manager.py  (+5 more)
QuadSim/: ctrl.py
QuadSim/quadFiles/: initQuad.py
hardware_adapter/: Makefile  ZMQ_to_serial.c  ZMQ_to_serial.h  command_queue.c  command_queue.h  hardware_adapter.h  hardware_adapterSerial.c  hardware_adapterUDP.c  hardware_adapterUDP.h  mainSerial.c  mainUDP.c  main_ZMQ_to_serial.c  main_mavlink_to_ZMQ.c  main_serial_to_ZMQ.c  main_zmq_commands_mavlink.c  mavlink_data_queue.c  mavlink_data_queue.h  mavlink_to_ZMQ.c  mavlink_to_ZMQ.h  serial_to_ZMQ.c  serial_to_ZMQ.h  sine_test_module.c  sine_test_module.h  zmq_commands_mavlink.c  zmq_commands_mavlink.h  zmq_wrapper.c
hardware_adapter/c/: README.md  hardware_adapter.c  main.c  zmq_wrapper.c
hardware_adapterC/: Makefile  common.h  hardware_adapter.c  main.c  udp_example.c
multidrone/: PX4_noetic_sim_bash.sh  arm_and_takeoff.py  commands.list  mavlinkSwitchToMode.py  mavlinkTakeoffLandAlt.py  positions.txt  run_multidrone_bridges.sh  simpleZMQtakeoff.py  simpleZMQtakeoffland.py  sitl_multiple_run.sh  takeoffland.py  zmqTakeoffLandAlt.py
rlPolicyCPP/: Makefile  README.md  RLPolicyJSON.cpp  RLPolicyJSON.h  generate_test_data.py  main.cpp  rl_policyClean.py  test_comparison.cpp
simplemavlinktest/: Makefile  README.md  simpleMavlinkTest.c
system_managerCPP/: .gitignore  CMakeLists.txt  README.md  accPIDcontrol.json  acceleration_pid_controller_params.json  build.sh  clean_build.sh  pidcontrol.json  pidcontrol.json.bak  rlcontrol.json  rlcontrol.json.bak  system_manager_config.json  velocity_pid_controller_params.json  velocity_rl_controller_params.json  velocity_rl_controller_params.json.bak
system_managerCPP/Include/: Control.h  IntegralUtils.h  MatrixUtils.h  RLPolicyClean.h  SystemManager.h  VelocityPIDController.h  VelocityRLController.h  general.h
system_managerCPP/Include/utils/: Altitude.h  ApproachPath.h  Buffer.h  CameraType.h  CommonConstants.h  ControllerType.h  Euler.h  Feature.h  FeatureList.h  FlightData.h  FlightMode.h  GeneralFuncs.h  Imu.h  JsonFile.h  LLA.h  Logger.h  LowPassFilter.h  LpfType.h  MavCmd.h  NED.h  PX4FlightState.h  Pixel.h  Quaternion.h  RateCmd.h  SimpleJSONParser.h  TimeUtils.h  Tuning.h  TuningState.h  TuningSubstate.h  Utils.h  VehicleType.h  VirtualTarget.h  YawCommand.h  YawCommandType.h
system_managerCPP/Src/: Control.cpp  IntegralUtils.cpp  MatrixUtils.cpp  RLPolicyClean.cpp  SystemManager.cpp  VelocityPIDController.cpp  VelocityRLController.cpp  main.cpp
system_managerCPP/Src/utils/: Altitude.cpp  CameraType.cpp  Euler.cpp  Feature.cpp  FeatureList.cpp  FlightData.cpp  GeneralFuncs.cpp  Imu.cpp  JsonFile.cpp  LLA.cpp  Logger.cpp  LowPassFilter.cpp  NED.cpp  Pixel.cpp  Quaternion.cpp  RateCmd.cpp  SimpleJSONParser.cpp  TimeUtils.cpp  Tuning.cpp  TuningState.cpp  TuningSubstate.cpp  Utils.cpp  VirtualTarget.cpp
system_managerCPP/python/: ENABLE_CPP_ACTION_LOGGING.md  README.md  rl_policy_clean.py  test_inference.py
system_managerPY/: control.py  controlVelocityPID.py  hardware_adapter.py  mavsdk_adapter.py  point_trajectory_env.py  rl_policyClean.py  system_manager.py  trajectories.py
system_managerPY/Filter/: AllInOneKalman.py  IEKF.py  LIEKF.py  MEKF.py  SE23_se23_EqF.py  SE23_se3_EqF.py  SE3_se3_R3_EqF.py  TF_IEKF.py  TF_LIEKF.py  UKF.py
system_managerPY/Filter/Symmetries/Calibrated/SE23_R6/: Symmetry.py  System.py
system_managerPY/Filter/Symmetries/Calibrated/SE23_se23/: Symmetry.py  System.py
system_managerPY/Filter/Symmetries/Calibrated/SE23_se3/: Symmetry.py  System.py
system_managerPY/Filter/Symmetries/Calibrated/SE3_se3_R3/: Symmetry.py  System.py
system_managerPY/Filter/Symmetries/Calibrated/SO3_R12/: System.py
system_managerPY/Filter/Symmetries/Calibration/SE23_se23/: Symmetry.py  System.py
system_managerPY/Filter/Symmetries/Calibration/SE23_se3/: Symmetry.py  System.py
system_managerPY/Filter/Symmetries/Calibration/SE3_se3_R3/: Symmetry.py  System.py
system_managerPY/Filter/Utils/: matrix_math.py  utils.py
system_managerPY/extraControllers/: controlAccelerationPID.py  controlBrescianini.py  controlGeom.py  controlGeomAdaptive.py  controlGeomAdaptiveConstrained.py  controlJaeyoung.py  controlKooijman.py
system_managerPY/pylie/: MR1.py  R3.py  SE3.py  SO3.py
train_dir/reward_shape_epsilon_0.05/: config.json
